--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsdom": "^23.2.0",
-    "morgan": "~1.9.1",
-    "puppeteer": "^21.7.0",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.1",
+    "puppeteer": "^24.32.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-extra-plugin-user-data-dir": "^2.4.1"
   }
 }
