--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "^0.29.0",
     "jsdom": "^23.2.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "morgan": "^1.10.1",
     "puppeteer": "^24.32.0",
     "puppeteer-extra": "^3.3.6",
